# vcf

./: README.md  setup.cfg  vcf.py
src/vcf/: io.py
src/vcf/utils/: models.py
