[metadata]
name = vcf
version = 0.0.1
author = Artak Kirakosyan
author_email = artakkirakosyan96@gmail.com
description = VCF reader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artak-kirakosyan/vcf
project_urls =
    Bug Tracker = https://github.com/artak-kirakosyan/vcf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
